# ChaosRank-Engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  test_engine.py
.github/workflows/: ci.yml
benchmarks/: convert_deathstar.py  extract_incidents.py  plot_results.py  run_comparison.py
benchmarks/results/: trial_results.csv
benchmarks/sensitivity/: run_sensitivity.py
chaosrank_engine/: __init__.py
chaosrank_engine/adaptive/: adaptive_ranker.py  confidence.py  outcome_store.py  weight_updater.py
chaosrank_engine/api/: auth.py  main.py  models.py  webhook_manager.py
chaosrank_engine/api/routes/: adaptive.py  federation.py  health.py  orchestration.py  rank.py  webhooks.py
chaosrank_engine/federation/: contracts.py  correlation.py  federated_graph.py  registry.py
chaosrank_engine/graph/: blast_radius.py  builder.py
chaosrank_engine/orchestration/: agent.py  incremental.py  merger.py  streaming.py
chaosrank_engine/parser/: asyncapi.py  incidents.py  jaeger.py  kafka.py  normalize.py
chaosrank_engine/scorer/: fragility.py  ranker.py  suggest.py
tests/: test_adaptive.py  test_betweenness.py  test_blast_radius.py  test_federation.py  test_fragility.py  test_orchestration.py  test_parsers_async.py  test_ranker.py  test_webhooks.py
